--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -37,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1.Business Understanding\n"
+        "#1.Business Understanding\n"
       ],
       "metadata": {
         "id": "cwtXyOapIeCN"
@@ -47,7 +47,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "##1.1 Background\n",
+        "#1.1 Background\n",
         "Legal and legislative documents are essential for promoting civic education, transparency, and the rule\n",
         "of law. However, the volume and complexity of these documents make it difficult for the public,\n",
         "researchers, and policymakers to easily locate and interpret relevant information.\n",
@@ -65,7 +65,7 @@
         "matters. Classifying these judgments automatically would greatly aid legal practitioners, students,\n",
         "journalists, and the public in finding and studying relevant cases.\n",
         "\n",
-        "##1.2 Business Objectives\n",
+        "#1.2 Business Objectives\n",
         "The main objective is to automatically classify court judgments into predefined categories based on their\n",
         "content. This will:\n",
         " Enhance search ability of judgments for legal researchers and the general public.\n",
@@ -76,7 +76,7 @@
         "* Promote transparency and civic awareness by making legal decisions more accessible and\n",
         "understandable.\n",
         "\n",
-        "##1.3 Business Success Criteria\n",
+        "#1.3 Business Success Criteria\n",
         "The success of the project will be measured by:\n",
         "1. Classification Accuracy – The automated system should correctly classify at least 80% of\n",
         "judgments into the correct category\n",
@@ -84,7 +84,7 @@
         "2. Usability – Legal researchers and students should be able to retrieve and filter judgments with\n",
         "minimal effort.\n",
         "\n",
-        "##1.4 Data Mining Goals\n",
+        "#1.4 Data Mining Goals\n",
         "* Develop a text classification model that can process PDF judgments and assign them to\n",
         "categories such as criminal, civil, constitutional, etc.\n",
         "\n",
@@ -93,7 +93,7 @@
         "* Deploy the model in a way that allows non-technical users to query and retrieve categorized\n",
         "judgments.\n",
         "\n",
-        "##1.5 Data Mining Success Criteria\n",
+        "#1.5 Data Mining Success Criteria\n",
         "The data mining task will be considered successful if:\n",
         "* The classification model achieves at least 80% accuracy\n",
         "  \n",
@@ -107,7 +107,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "XuwFYyJy_0tp"
+        "id": "1RkUSnXNCC2-"
       },
       "execution_count": null,
       "outputs": []
