--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -63,41 +63,7 @@
         "The focus of this project is on court judgments in PDF format. These judgments are written in natural\n",
         "language and cover various categories such as criminal, civil, family, constitutional, and commercial\n",
         "matters. Classifying these judgments automatically would greatly aid legal practitioners, students,\n",
-        "journalists, and the public in finding and studying relevant cases.\n",
-        "\n",
-        "#1.2 Business Objectives\n",
-        "The main objective is to automatically classify court judgments into predefined categories based on their\n",
-        "content. This will:\n",
-        " Enhance search ability of judgments for legal researchers and the general public.\n",
-        "* Improve legal education by organizing case law for academic and training purposes.\n",
-        "\n",
-        "* Support legal practitioners in quickly retrieving precedents relevant to their cases.\n",
-        "\n",
-        "* Promote transparency and civic awareness by making legal decisions more accessible and\n",
-        "understandable.\n",
-        "\n",
-        "#1.3 Business Success Criteria\n",
-        "The success of the project will be measured by:\n",
-        "1. Classification Accuracy – The automated system should correctly classify at least 80% of\n",
-        "judgments into the correct category\n",
-        "\n",
-        "2. Usability – Legal researchers and students should be able to retrieve and filter judgments with\n",
-        "minimal effort.\n",
-        "\n",
-        "#1.4 Data Mining Goals\n",
-        "* Develop a text classification model that can process PDF judgments and assign them to\n",
-        "categories such as criminal, civil, constitutional, etc.\n",
-        "\n",
-        "* Evaluate model performance using metrics such as accuracy and precision\n",
-        "\n",
-        "* Deploy the model in a way that allows non-technical users to query and retrieve categorized\n",
-        "judgments.\n",
-        "\n",
-        "#1.5 Data Mining Success Criteria\n",
-        "The data mining task will be considered successful if:\n",
-        "* The classification model achieves at least 80% accuracy\n",
-        "  \n",
-        "* The system can process new, unseen PDF judgments with high accuracy."
+        "journalists, and the public in finding and studying relevant cases.\n"
       ],
       "metadata": {
         "id": "Ll2zp3FQUnXu"
