[BU] Edited business understanding section to code_unza25_csc4792_project_team_12_notebook.ipynb

--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -48,22 +48,12 @@
       "source": [
         "\n",
         "#1.1 Background\n",
-        "Legal and legislative documents are essential for promoting civic education, transparency, and the rule\n",
-        "of law. However, the volume and complexity of these documents make it difficult for the public,\n",
-        "researchers, and policymakers to easily locate and interpret relevant information.\n",
-        "The DataLab Research Group at The University of Zambia is investigating the application of data mining\n",
-        "techniques to improve the accessibility and organization of such documents.\n",
+        "Academic publications are essential for tracking research productivity, promoting collaboration, and enhancing institutional visibility. However, the challenge of author name ambiguity makes it difficult for universities to accurately identify which publications belong to their faculty members. This is because multiple authors may share the same or similar names, affiliations may be missing or outdated, and authors may change institutions over time.\n",
         "\n",
-        "Two major publicly accessible sources of legal and legislative information in Zambia are:\n",
-        "*  National Assembly of Zambia – Provides legislative bills, acts, and parliamentary debates.\n",
+        "The University of Zambia (UNZA) needs a reliable and efficient way to identify publications authored by its faculty members across multiple academic databases. This will support accurate reporting of research output, strengthen the institution’s academic profile, and enable better decision-making in research management.\n",
         "\n",
-        "* Zambia Legal Information Institute (ZambiaLII) – Provides court judgments, case summaries, and\n",
-        "other legal references.\n",
-        "\n",
-        "The focus of this project is on court judgments in PDF format. These judgments are written in natural\n",
-        "language and cover various categories such as criminal, civil, family, constitutional, and commercial\n",
-        "matters. Classifying these judgments automatically would greatly aid legal practitioners, students,\n",
-        "journalists, and the public in finding and studying relevant cases.\n"
+        "The focus of this project is to develop a Data-driven classification model that can predict whether a given publication belongs to a UNZA faculty member. The system will analyze publication metadata such as author names, affiliations, email domains, co-author networks, and research topics to make this determination.\n",
+        "\n"
       ],
       "metadata": {
         "id": "Ll2zp3FQUnXu"
