''Added 1.2 Business Objectives"

--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -67,6 +67,30 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1.2 Business Objectives\n",
+        "The main objective is to automatically identify publications that belong to UNZA faculty members. This will:\n",
+        "\n",
+        "- Reduce the time and effort required for manual verification of research outputs.\n",
+        "- Improve the completeness and accuracy of institutional publication records.\n",
+        "- Enhance research visibility for UNZA by ensuring faculty work is properly credited.\n",
+        "- Support strategic decision-making in research funding, performance evaluation, and collaborations.\n"
+      ],
+      "metadata": {
+        "id": "sINUj7ddF-ny"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iVhps9nkGIOk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
