[BU] Updated notebook.

--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -84,25 +84,17 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "iVhps9nkGIOk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "##1.3 Business Success Criteria\n",
-        "The success of the project will be measured by:\n",
-        "1.\tClassification Accuracy – The automated system should correctly identify at least 80% of publications as belonging or not belonging to UNZA faculty members.\n",
-        "2.\tPractical Usability – The system should allow research administrators and other stakeholders to process and verify publications with minimal effort.\n",
-        "3.\tInterpretability – The model should provide explanations for its predictions to build trust in the system’s decisions.\n"
+        "## 1.5 Data Mining Success Criteria\n",
+        "\n",
+        "The data mining task will be considered successful if:\n",
+        "- The classification model achieves at least 80% accuracy on a held-out test dataset.\n",
+        "-Precision and recall are both at least 75%, ensuring both correctness and completeness of UNZA punlication identification.\n",
+        "-The system can process new, unseen publication data with consistent performance."
       ],
       "metadata": {
-        "id": "926RpUm5ZBup"
+        "id": "b3H8nuTYY7_3"
       }
     }
   ]
