--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -86,6 +86,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 1.4 Data Mining Goals\n",
+        "- Develop a classification model that can predict whether a publication belongs to a UNZA faculty member based on its metadata.\n",
+        "- Apply supervised machine learning techniques using labeled examples of UNZA and non-UNZA publications.\n",
+        "- Extract and engineer features such as presence of \"University of Zambia\" in affiliations, \"@unza.zm\" in email addresses, and frequent co-authorship with known UNZA staff.\n",
+        "- Evaluate model performance using metrics such as accuracy, precision, recall, and F1-score.\n"
+      ],
+      "metadata": {
+        "id": "3satX8g4bg7M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 1.5 Data Mining Success Criteria\n",
         "\n",
         "The data mining task will be considered successful if:\n",
