--- a/code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -86,6 +86,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 1.3 Business Success Criteria\n",
+        "The success of the project will be measured by:\n",
+        "1.\tClassification Accuracy – The automated system should correctly identify at least 80% of publications as belonging or not belonging to UNZA faculty members.\n",
+        "2.\tPractical Usability – The system should allow research administrators and other stakeholders to process and verify publications with minimal effort.\n",
+        "3.\tInterpretability – The model should provide explanations for its predictions to build trust in the system’s decisions\n"
+      ],
+      "metadata": {
+        "id": "cKroIXrbeTC1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 1.4 Data Mining Goals\n",
         "- Develop a classification model that can predict whether a publication belongs to a UNZA faculty member based on its metadata.\n",
         "- Apply supervised machine learning techniques using labeled examples of UNZA and non-UNZA publications.\n",
