[DP]  i identified which columns have missing data. i also checked for duplicates, since duplicate publications could bias the model.

--- a/Copy_of_code_unza25_csc4792_project_team_12_notebook.ipynb
+++ b/Copy_of_code_unza25_csc4792_project_team_12_notebook.ipynb
@@ -132,9 +132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0NyWA3MmsVzk",
-        "outputId": "87214b85-e38d-4f83-dba5-cde21e3b8356"
+        "outputId": "4e7c33e4-075c-4c3f-f05f-36e236fa55b4"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,12 +539,12 @@
       ],
       "metadata": {
         "id": "80NyWKEPDRgI",
-        "outputId": "4a0e5f49-8e81-4f60-ea2e-a22295418604",
+        "outputId": "9e4be230-6e3a-499c-90e0-ae1909c1bc2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,6 +615,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NhQSF5uoWzpI"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1095,9 +1104,9 @@
           "height": 310
         },
         "id": "rj0w3FWrkV84",
-        "outputId": "7b1cd4c4-1faa-44f0-81f8-84bc09d80f8f"
+        "outputId": "9ef01b6a-2437-40fd-cc35-38786b9e3d9c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1149,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-50df0ba9-6ca2-48b0-8fa8-21866f1578fc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-33a25937-aa37-4860-9345-156151691c9d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1231,7 +1240,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50df0ba9-6ca2-48b0-8fa8-21866f1578fc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33a25937-aa37-4860-9345-156151691c9d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1283,12 +1292,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-50df0ba9-6ca2-48b0-8fa8-21866f1578fc button.colab-df-convert');\n",
+              "        document.querySelector('#df-33a25937-aa37-4860-9345-156151691c9d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-50df0ba9-6ca2-48b0-8fa8-21866f1578fc');\n",
+              "        const element = document.querySelector('#df-33a25937-aa37-4860-9345-156151691c9d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1308,8 +1317,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-9f91bd7d-d98e-4f65-a006-42bffb5d8cf7\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9f91bd7d-d98e-4f65-a006-42bffb5d8cf7')\"\n",
+              "    <div id=\"df-e2e4624b-1752-4777-9353-45f2935b60f1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e2e4624b-1752-4777-9353-45f2935b60f1')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1428,7 +1437,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-9f91bd7d-d98e-4f65-a006-42bffb5d8cf7 button');\n",
+              "            document.querySelector('#df-e2e4624b-1752-4777-9353-45f2935b60f1 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1445,7 +1454,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -1846,6 +1855,67 @@
             "Year range: 2018.0 - 2022.0\n",
             "Top publication venues and authors are visualized above.\n",
             "Some missing abstracts and keywords exist, so cleaning may be needed before modeling.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3. Data Preparation\n",
+        "##3.1 Inspect Missing Values & Duplicates"
+      ],
+      "metadata": {
+        "id": "oHUp-sOhplNU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Missing values can cause errors during modeling. Here we identify which columns have missing data.\n",
+        "We also check for duplicates, since duplicate publications could bias the model."
+      ],
+      "metadata": {
+        "id": "_1HXAZ73rYjN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check for missing values\n",
+        "missing_counts = df.isnull().sum()\n",
+        "print(\"❗ Missing values per column:\")\n",
+        "print(missing_counts)\n",
+        "\n",
+        "# Check for duplicates\n",
+        "duplicates = df.duplicated(subset=['title', 'authors']).sum()\n",
+        "print(f\"\\n❗ Number of duplicate records based on title+authors: {duplicates}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lx2c8b9Pp_i_",
+        "outputId": "37e15e79-24a9-4df0-eb09-635b0c5dbe4d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "❗ Missing values per column:\n",
+            "authors               0\n",
+            "title                 0\n",
+            "abstract              0\n",
+            "publication_venue     0\n",
+            "year                 10\n",
+            "keywords             10\n",
+            "source                0\n",
+            "is_unza_faculty       0\n",
+            "dtype: int64\n",
+            "\n",
+            "❗ Number of duplicate records based on title+authors: 0\n"
           ]
         }
       ]
